--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,14 @@
 name: Test Build
 
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - '**'
-      - '!**/assets/**'
-      - '!**.md'
-  pull_request:
+#   push:
+#     branches:
+#       - master
+#     paths:
+#       - '**'
+#       - '!**/assets/**'
+#       - '!**.md'
+#   pull_request:
   workflow_dispatch:
 
 jobs:
